@@ -1,6 +1,6 @@
 # define	MAJ_VERSION	2
 # define	MIN_VERSION	1
-int	version_build_no = 56;
-# define VERSION_BUILD_NO 56
-char	version_build_date[] = "Thu Oct 11 21:58:46 2012";
+int	version_build_no = 57;
+# define VERSION_BUILD_NO 57
+char	version_build_date[] = "Sat Aug 30 19:35:23 2014";
 
